Set APR_USE_PTHREAD_SERIALIZE to the proper value ("0", not "") when we haven't enabled strings.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60604 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -486,6 +486,7 @@ if test "$ac_cv_enable_threads" = "no"; then
 echo "Don't enable threads"
     threads="0"
     pthreadh="0"
+    pthreadser="0"
 else
     REENTRANCY_FLAGS
     if test "$ac_cv_enable_threads" = "pthread"; then
