--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -93,6 +93,7 @@
 #define APR_HAS_XLATE             @iconv@
 #define APR_HAS_OTHER_CHILD       @oc@
 #define APR_HAS_DSO               @aprdso@
+#define APR_HAS_UNICODE_FS        0
 
 /* This macro tells APR that it is safe to make a file masquerade as a 
  * socket.  This is necessary, because some platforms support poll'ing
