export threading flags so that apps using APR know how to compile their own files. (and link properly against APR)
Submitted by: Branko Cibej <brane@xbc.nu>
Reviewed by: Greg Stein


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60612 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -715,6 +715,8 @@ AC_SUBST(OSDIR)
 AC_SUBST(DEFAULT_OSDIR)
 AC_SUBST(LIBPREFIX)
 AC_SUBST(EXEEXT)
+AC_SUBST(THREAD_CPPFLAGS)
+AC_SUBST(THREAD_CFLAGS)
 
 echo "Construct Makefiles and header files."
 MAKEFILE1="Makefile lib/Makefile strings/Makefile passwd/Makefile tables/Makefile"
