look for gethostname in an existing -lnsl rather than bringing it in a second time. simplify the search for crypt() a bit.
Submitted by: Joe Orton <joe@light.plus.com>
Reviewed by: Greg Stein


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60623 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -201,10 +201,9 @@ fi
 
 dnl #----------------------------- Checks for Any required Libraries
 AC_CHECK_LIB(nsl,gethostbyname)
-AC_CHECK_LIB(nsl,gethostname)
+AC_SEARCH_LIBS(gethostname, nsl)
 AC_CHECK_LIB(socket,socket)
-AC_CHECK_LIB(crypt,crypt)
-AC_CHECK_LIB(ufc,crypt)
+AC_SEARCH_LIBS(crypt, crypt ufc)
 AC_CHECK_LIB(truerand,main)
 AC_CHECK_LIB(iconv,iconv)
 
