--- a/include/apr.h.in
+++ b/include/apr.h.in
@@ -74,6 +74,8 @@
 #define APR_HAVE_STRSTR         @have_strstr@
 #define APR_HAVE_MEMMOVE        @have_memmove@
 #define APR_HAVE_BZERO          @have_bzero@
+#define APR_HAVE_V6             @have_sockaddr_in6@
+
 
 #if APR_HAVE_SYS_TYPES_H
 #include <sys/types.h>
