--- a/configure.in
+++ b/configure.in
@@ -705,7 +705,7 @@ APR_CHECK_SOCKADDR_SA_LEN
 
 APR_CHECK_GETHOSTBYNAME_NAS
 
-echo "${nl}IPv6 Networking support??"
+echo $ac_n "${nl}Checking for IPv6 Networking support...${nl}"
 dnl # Start of checking for IPv6 support...
 AC_SEARCH_LIBS(getaddrinfo, inet6)
 AC_CHECK_FUNCS(getaddrinfo)
@@ -728,7 +728,7 @@ AC_SUBST(EXEEXT)
 AC_SUBST(THREAD_CPPFLAGS)
 AC_SUBST(THREAD_CFLAGS)
 
-echo "${nl}${nl}Construct Makefiles and header files."
+echo "${nl}Construct Makefiles and header files."
 MAKEFILE1="Makefile lib/Makefile strings/Makefile passwd/Makefile tables/Makefile"
 SUBDIRS="lib strings passwd tables "
 for dir in $MODULES
