Move all of the dso private header files to an arch directory under the include directory.  All private header files for APR are being moved. This allows platforms that only implement some of the APR types to compile cleanly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60652 13f79535-47bb-0310-9956-ffa450edef68

--- a/dso/unix/Makefile.in
+++ b/dso/unix/Makefile.in
@@ -11,7 +11,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I.
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 LIB=libdso.a
 
@@ -49,7 +49,7 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-dso.o: dso.c dso.h $(INCDIR)/apr_private.h \
+dso.o: dso.c $(INCDIR)/arch/unix/dso.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
