--- a/file_io/os2/Makefile.in
+++ b/file_io/os2/Makefile.in
@@ -8,9 +8,8 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
-INCDIR1=../../include
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCDIR=../../include
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 LIB=file.a
 
