--- a/i18n/unix/Makefile.in
+++ b/i18n/unix/Makefile.in
@@ -6,7 +6,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I.
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 OBJS=xlate.o
 
@@ -37,6 +37,10 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
+utf8_ucs2.o: utf8_ucs2.c $(INCDIR)/arch/unix/i18n.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_xlate.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h
 xlate.o: xlate.c $(INCDIR)/apr_private.h $(INCDIR)/apr_lib.h \
  $(INCDIR)/apr.h $(INCDIR)/apr_pools.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
