Move all of the shmem private header files to an arch directory under the include directory.  All private header files for APR are being moved. This allows platforms that only implement some of the APR types to compile cleanly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60657 13f79535-47bb-0310-9956-ffa450edef68

--- a/shmem/os2/Makefile.in
+++ b/shmem/os2/Makefile.in
@@ -8,10 +8,8 @@ RANLIB=@RANLIB@
 CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
-INCDIR=../../inc
-INCDIR1=../../include
-INCDIR2=../../file_io/os2
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I$(INCDIR2) -I.
+INCDIR=../../include
+INCLUDES=-I$(INCDIR)
 
 LIB=shmem.a
 
