Clean up a Makefile
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60658 13f79535-47bb-0310-9956-ffa450edef68

--- a/strings/Makefile.in
+++ b/strings/Makefile.in
@@ -11,8 +11,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../include
-INCDIR1=../misc/@OSDIR@
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I../misc/unix
+INCLUDES=-I$(INCDIR)
 
 #LIB=@LIBPREFIX@apr.a
 
