Move all of the threadproc private header files to an arch directory under the include directory.  All private header files for APR are being moved. This allows platforms that only implement some of the APR types to compile cleanly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60660 13f79535-47bb-0310-9956-ffa450edef68

--- a/threadproc/beos/Makefile.in
+++ b/threadproc/beos/Makefile.in
@@ -9,8 +9,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCDIR1=../../file_io/unix
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 LIB=libthreadproc.a
 
