--- a/threadproc/unix/Makefile.in
+++ b/threadproc/unix/Makefile.in
@@ -10,8 +10,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCDIR1=../../file_io/unix
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 LIB=libthreadproc.a
 
@@ -53,40 +52,43 @@ depend:
 	    && rm Makefile.new
 
 # DO NOT REMOVE
-proc.o: proc.c threadproc.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h \
- $(INCDIR)/apr_strings.h $(INCDIR)/apr_portable.h \
- $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h
-procsup.o: procsup.c threadproc.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
-signals.o: signals.c threadproc.h $(INCDIR)/apr.h \
- $(INCDIR)/apr_private.h $(INCDIR)/apr_thread_proc.h \
- $(INCDIR)/apr_file_io.h $(INCDIR)/apr_general.h \
- $(INCDIR)/apr_errno.h $(INCDIR)/apr_time.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
+proc.o: proc.c $(INCDIR)/arch/unix/threadproc.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/arch/unix/fileio.h \
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h $(INCDIR)/apr_strings.h \
+ $(INCDIR)/apr_portable.h $(INCDIR)/apr_network_io.h \
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h
+procsup.o: procsup.c $(INCDIR)/arch/unix/threadproc.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/arch/unix/fileio.h \
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h
+signals.o: signals.c $(INCDIR)/arch/unix/threadproc.h \
+ $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
+ $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
+ $(INCDIR)/apr_time.h $(INCDIR)/arch/unix/fileio.h \
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h
 thread.o: thread.c $(INCDIR)/apr.h $(INCDIR)/apr_portable.h \
  $(INCDIR)/apr_general.h $(INCDIR)/apr_errno.h \
  $(INCDIR)/apr_thread_proc.h $(INCDIR)/apr_file_io.h \
  $(INCDIR)/apr_time.h $(INCDIR)/apr_network_io.h \
- $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h threadproc.h \
- $(INCDIR)/apr_private.h ../../file_io/unix/fileio.h \
- $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h \
- $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
+ $(INCDIR)/arch/unix/threadproc.h $(INCDIR)/apr_private.h \
+ $(INCDIR)/arch/unix/fileio.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h
 threadpriv.o: threadpriv.c $(INCDIR)/apr.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_general.h \
  $(INCDIR)/apr_errno.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_network_io.h $(INCDIR)/apr_lock.h \
- $(INCDIR)/apr_dso.h threadproc.h $(INCDIR)/apr_private.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
+ $(INCDIR)/apr_dso.h $(INCDIR)/arch/unix/threadproc.h \
+ $(INCDIR)/apr_private.h $(INCDIR)/arch/unix/fileio.h \
+ $(INCDIR)/apr_tables.h $(INCDIR)/apr_lib.h \
+ $(INCDIR)/apr_pools.h
