Move all of the time private header files to an arch directory under the include directory.  All private header files for APR are being moved. This allows platforms that only implement some of the APR types to compile cleanly.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60661 13f79535-47bb-0310-9956-ffa450edef68

--- a/time/unix/Makefile.in
+++ b/time/unix/Makefile.in
@@ -10,7 +10,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCLUDES=-I$(INCDIR) -I.
+INCLUDES=-I$(INCDIR)
 
 #LIB=libtime.a
 
