--- a/mmap/unix/Makefile.in
+++ b/mmap/unix/Makefile.in
@@ -10,8 +10,7 @@ CFLAGS=@CFLAGS@ @OPTIM@
 LIBS=@LIBS@
 LDFLAGS=@LDFLAGS@ $(LIBS)
 INCDIR=../../include
-INCDIR1=../../file_io/@OSDIR@
-INCLUDES=-I$(INCDIR) -I$(INCDIR1) -I.
+INCLUDES=-I$(INCDIR) -I$(INCDIR)/arch
 
 LIB=libmmap.a
 
@@ -61,5 +60,5 @@ mmap.o: mmap.c $(INCDIR)/apr.h $(INCDIR)/apr_private.h \
  $(INCDIR)/apr_file_io.h $(INCDIR)/apr_time.h \
  $(INCDIR)/apr_portable.h $(INCDIR)/apr_thread_proc.h \
  $(INCDIR)/apr_lock.h $(INCDIR)/apr_dso.h \
- ../../file_io/unix/fileio.h $(INCDIR)/apr_lib.h \
- $(INCDIR)/apr_pools.h $(INCDIR)/apr_tables.h
+ $(INCDIR)/arch/unix/fileio.h $(INCDIR)/apr_tables.h \
+ $(INCDIR)/apr_lib.h $(INCDIR)/apr_pools.h
