--- a/configure.in
+++ b/configure.in
@@ -213,7 +213,11 @@ AC_CHECK_FUNCS(sigaction, [ have_sigaction="1" ], [ have_sigaction="0" ])
 AC_CHECK_FUNCS(setrlimit, [ have_setrlimit="1" ], [ have_setrlimit="0" ]) 
 AC_CHECK_FUNCS(getrlimit, [ have_getrlimit="1" ], [ have_getrlimit="0" ]) 
 AC_CHECK_FUNCS(writev)
-AC_CHECK_FUNCS(sendfile send_file, [ sendfile="1" ], [ sendfile="0" ])
+sendfile="0"
+AC_CHECK_FUNCS(sendfile send_file, [ sendfile="1" ])
+#if test "$OS" = "*osf" -o "$OS" = "*alpha*" ; then
+#    sendfile="0"
+#fi
 AC_CHECK_FUNCS(fork, [ fork="1" ], [ fork="0" ])
 AC_CHECK_FUNCS(getpass)
 APR_CHECK_INET_ADDR
