--- a/configure.in
+++ b/configure.in
@@ -215,9 +215,12 @@ AC_CHECK_FUNCS(getrlimit, [ have_getrlimit="1" ], [ have_getrlimit="0" ])
 AC_CHECK_FUNCS(writev)
 sendfile="0"
 AC_CHECK_FUNCS(sendfile send_file, [ sendfile="1" ])
-#if test "$OS" = "*osf" -o "$OS" = "*alpha*" ; then
-#    sendfile="0"
-#fi
+case "$OS" in
+    *alpha*-dec-osf* )
+        sendfile="0"
+        echo "sendfile support disabled to avoid system problem"
+        ;;
+esac       
 AC_CHECK_FUNCS(fork, [ fork="1" ], [ fork="0" ])
 AC_CHECK_FUNCS(getpass)
 APR_CHECK_INET_ADDR
