add apr_get_home_directory(), teach mod_userdir to use that instead of calling getpwnam[_r] directly, back out mod_userdir's config check for getpwnam_r
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@60709 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -35,7 +35,7 @@ fi
 # These added to allow default directories to be used...
 DEFAULT_OSDIR="unix"
 echo "(Default will be ${DEFAULT_OSDIR})"
-MODULES="file_io network_io threadproc misc locks time mmap shmem i18n"
+MODULES="file_io network_io threadproc misc locks time mmap shmem i18n user"
 
 # Most platforms use a prefix of 'lib' on their library files.
 LIBPREFIX='lib'
@@ -268,6 +268,7 @@ AC_CHECK_HEADERS(memory.h)
 AC_CHECK_HEADERS(netdb.h)
 AC_CHECK_HEADERS(osreldate.h)
 AC_CHECK_HEADERS(process.h)
+AC_CHECK_HEADERS(pwd.h)
 AC_CHECK_HEADERS(sys/sem.h)
 AC_CHECK_HEADERS(signal.h, signalh="1", signalh="0")
 AC_CHECK_HEADERS(stdarg.h, stdargh="1", stdargh="0")
